--- a/models/mm_eng_mapping.json
+++ b/models/mm_eng_mapping.json
@@ -527,7 +527,7 @@
     "ပဉ္စသဋ္ဌိ": "",
     "ပဉ္စအသီတိ": "",
     "ပဏ္ဏဝီသတိ": "",
-    "ပုဗ္ဗသီရိ": "pobba thiri",
+    "ပုဗ္ဗသီရိ": "pobba therei",
     "ပန်းတနော်": "pantanaw",
     "ပိုင်ကျုံ": "paingkyon",
     "ပုဏ္ဏရိကံ": "pounnareikam",
@@ -1289,6 +1289,10 @@
     "အုတ္တရသီရိ": "oattara thiri",
     "ဦ": "oou",
     "၏": "eii",
+    "ဣဒ္ဓိ": "eiiddei",
+    "ဣန္ဒြေ": "eiindray",
+    "ဣန္ဒြာ": "eiindrar",
+    "ဣန္ဒြီ": "eiindye",
     "ဣ": "eii",
     "ဧည့်": "eii",
     "ဧရာဝတီ": "ayeyawady"
