--- a/models/mm_eng_mapping.json
+++ b/models/mm_eng_mapping.json
@@ -337,7 +337,8 @@
     "တြံ": "taram",
     "တြီ": "tare",
     "တြိ": "tarei",
-    "တြာ": "tara",
+    "တြား": "tararr",
+    "တြာ": "tarar",
     "တြ": "tara",
     "တျော": "tayaww",
     "တျေ": "tayay",
@@ -598,7 +599,6 @@
     "ပုည": "",
     "ပလ": "pala",
     "ပပဝတီ": "papawate",
-    "ပြည်": "pyay",
     "ဖြူး": "phyu",
     "ဖယ်ခုံ": "pekon",
     "ဖျာပုံ": "pyapon",
